--- a/freeads/composer.json
+++ b/freeads/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "cmgmyr/messenger": "^2.15",
         "fideloper/proxy": "^4.0",
+        "ghanem/rating": "^1.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0"
